chore: externalize oauth secrets to environment variables